responsividade login e registro

--- a/public/pages/login/index.html
+++ b/public/pages/login/index.html
@@ -29,8 +29,8 @@
             <button class="nav-btn-header">Sobre</button>
         </a>
 
-        <a href="../../pages/login/index.html">
-            <button class="nav-btn-header">Login</button>
+        <a href="../../pages/register/index.html">
+            <button class="nav-btn-header">Registrar</button>
         </a>
         </nav>
         <div class="sub-container-header">
@@ -68,9 +68,7 @@
                 <div id="messageBox" style="display: none; margin-top: 10px; padding: 10px; border-radius: 5px;"></div>
                 <div class="register-btn-area">
                     <a href="../../pages/register/index.html">
-                        <button type="submit" class="register-btn">
-                            Registrar
-                        </button>
+
                     </a>
                 </div>
 
@@ -79,30 +77,31 @@
         </div>
     </main>
     <footer>
-        <nav>
-            <div class="sections">
-                <h1>Seções</h1>
-                <a href="../../pages/login/index.html"><h2>Login</h2></a>
-                <a href="../../pages/sobre/index.html"><h2>Sobre nós</h2></a>
-                <a href="../../pages/cart/index.html"><h2>Carrinho</h2></a>
-            </div>
-            <div class="contact">
-                <h1>Contato</h1>
-                <h2>Akatsuki.uv@gmail.com</h2>
-                <h2>(11) 91426-2903</h2>
-                <h2>4321-1234</h2>
-            </div>
-            <div class="links">
-                <h1>Links</h1>
-                <h2>Instagram</h2>
-                <h2>Facebook</h2>
-                <h2>Whatsapp</h2>
-            </div>
-        </nav>
-        <div class="footer-logo">
-            <img src="../../../assets/logo-icon.svg" alt="">
-        </div>
-    </footer>
+      <nav>
+          <div class="sections">
+              <h1>Seções</h1>
+              <a href="../../pages/login/index.html"><h2>Login</h2></a>
+              <a href="../../pages/sobre/index.html"><h2>Sobre nós</h2></a>
+              <a href="../../pages/cart/index.html"><h2>Carrinho</h2></a>
+          </div>
+          <div class="contact">
+              <h1>Contato</h1>
+              <h2>Akatsuki.uv@gmail.com</h2>
+              <h2>(11) 91426-2903</h2>
+              <h2>4321-1234</h2>
+          </div>
+          <div class="links">
+              <h1>Links</h1>
+              <h2>Instagram</h2>
+              <h2>Facebook</h2>
+              <h2>Whatsapp</h2>
+          </div>
+      </nav>
+      <div class="footer-logo">
+          <img src="../../../assets/logo-icon.svg" alt="">
+      </div>
+  </footer>
+
     <script type="module">
         window.Login = Login;
       </script>
