--- a/public/pages/cart/index.html
+++ b/public/pages/cart/index.html
@@ -63,7 +63,7 @@
       <div class="total-price">
         <span id="total-price">Valor total: R$ 0,00</span>
       </div>
-      <a href="../payment/index.html"><button class="checkout-button"Pagamento>Pagamento</button></a>
+      <a href="../payment/index.html"><button class="checkout-button" Pagamento>Pagamento</button></a>
     </div>
   </main>
 
@@ -99,175 +99,7 @@
     </div>
   </footer>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const user = JSON.parse(sessionStorage.getItem("loggedUser"));
-      if (!user) {
-        alert("Você precisa estar logado para ver o carrinho.");
-        window.location('../../../index.html')
-      }
-
-      const cart = JSON.parse(localStorage.getItem('carts')) || {};
-      const userCart = cart[user.email] || [];
-      const cartContainer = document.getElementById('cart-items');
-      const totalItemsElement = document.getElementById('total-items');
-      const totalPriceElement = document.getElementById('total-price');
-
-      let totalItems = 0;
-      let totalPrice = 0;
-
-      if (userCart.length === 0) {
-        cartContainer.innerHTML = '<p>O carrinho está vazio.</p>';
-        return;
-      }
-
-      userCart.forEach(item => {
-        const section = document.createElement('section');
-        section.classList.add('cart-item');
-
-        const itemTotal = item.price * item.quantity;
-        totalItems += item.quantity;
-        totalPrice += itemTotal;
-
-        section.innerHTML = `
-      <div class="item-details">
-        <img src="${item.image}" alt="${item.title}">
-        <div>
-          <h3>${item.title}</h3>
-          <p>${item.description}</p>
-        </div>
-      </div>
-      <div class="item-quantity">
-        <span>Quantidade</span>
-        <div class="quantity-control">
-          <button class="remove-button" data-title="${item.title}">❌</button>
-          <input type="number" value="${item.quantity}" min="1" data-id="${item.title}" data-price="${item.price}">
-        </div>
-
-      </div>
-      <div class="item-price">
-        <span>Preço</span>
-        <p>R$ ${(itemTotal).toFixed(2)}</p>
-      </div>
-    `;
-
-        cartContainer.appendChild(section);
-          // Atualiza valores de quantidade
-  const quantityInputs = document.querySelectorAll('.quantity-control input');
-  quantityInputs.forEach(input => {
-    input.addEventListener('change', (e) => {
-      const newQuantity = parseInt(e.target.value);
-      if (isNaN(newQuantity) || newQuantity < 1) {
-        e.target.value = 1;
-        return;
-      }
-
-      const title = e.target.dataset.id;
-      const price = parseFloat(e.target.dataset.price);
-
-      const updatedCart = userCart.map(item => {
-        if (item.title === title) {
-          item.quantity = newQuantity;
-        }
-        return item;
-      });
-
-      cart[user.email] = updatedCart;
-      localStorage.setItem('carts', JSON.stringify(cart));
-    });
-  });
-
-  // 👉 Adiciona eventos aos botões ❌ após os elementos existirem
-  const removeButtons = document.querySelectorAll('.remove-button');
-  removeButtons.forEach(button => {
-    button.addEventListener('click', (e) => {
-      const title = e.target.dataset.title;
-
-      const updatedCart = userCart.filter(item => item.title !== title);
-      cart[user.email] = updatedCart;
-      localStorage.setItem('carts', JSON.stringify(cart));
-
-      location.reload();
-    });
-  });
-
-      });
-
-      totalItemsElement.textContent = `Total de itens: ${totalItems}`;
-      totalPriceElement.textContent = `Valor total: R$ ${totalPrice.toFixed(2)}`;
-
-      const quantityInputs = document.querySelectorAll('.quantity-control input');
-      quantityInputs.forEach(input => {
-        input.addEventListener('change', (e) => {
-          const newQuantity = parseInt(e.target.value);
-          if (isNaN(newQuantity) || newQuantity < 1) {
-            e.target.value = 1;
-            return;
-          }
-
-          const title = e.target.dataset.id;
-          const price = parseFloat(e.target.dataset.price);
-
-          const updatedCart = userCart.map(item => {
-            if (item.title === title) {
-              item.quantity = newQuantity;
-            }
-            return item;
-          });
-
-          cart[user.email] = updatedCart;
-          localStorage.setItem('carts', JSON.stringify(cart));
-
-          location.reload();
-        });
-      });
-    });
-
-    function addToCart(button) {
-      const card = button.closest('.card');
-
-      const name = card.getAttribute('data-name');
-      const category = card.getAttribute('data-category');
-      const price = parseFloat(card.getAttribute('data-price'));
-      const image = card.querySelector('img').src;
-      const description = card.querySelector('.textbody').textContent;
-
-      if (isNaN(price)) {
-        alert("Erro ao obter o preço do produto.");
-        return;
-      }
-
-      const user = JSON.parse(sessionStorage.getItem("loggedUser"));
-      if (!user) {
-        alert("Você precisa estar logado para adicionar itens ao carrinho.");
-        return;
-      }
-
-      const product = {
-        title: name,
-        category: category,
-        price: price,
-        quantity: 1,
-        image: image,
-        description: description
-      };
-
-      const cart = JSON.parse(localStorage.getItem('carts')) || {};
-      const userCart = cart[user.email] || [];
-
-      const existingProductIndex = userCart.findIndex(item => item.title === product.title);
-      if (existingProductIndex !== -1) {
-        userCart[existingProductIndex].quantity += 1;
-      } else {
-        userCart.push(product);
-      }
-
-      cart[user.email] = userCart;
-      localStorage.setItem('carts', JSON.stringify(cart));
-
-      alert(`${name} foi adicionado ao carrinho!`);
-    }
-
+  <script src="./script.js">
   </script>
 </body>
 
