--- a/public/pages/login/index.html
+++ b/public/pages/login/index.html
@@ -105,7 +105,7 @@
     <script type="module">
         window.Login = Login;
       </script>
-      <script src="../../../controllers/loginControllers.js"></script>
+      <script src="./script.js"></script>
 </body>
 
 </html>
