ft: adicionando painel de gerenciamento de usuarios, com redirecionamento de acordo com o tipo de usuario

--- a/public/pages/panel/index.html
+++ b/public/pages/panel/index.html
@@ -12,7 +12,7 @@
       href="../../../assets/accounticon.ico"
       type="image/x-icon"
     />
-        <script src="../../../data/usersData.js"></script>
+    <script src="../../../data/usersData.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -55,8 +55,8 @@
           <button class="nav-btn-header">Sobre</button>
         </a>
 
-        <a href="../../pages/register/index.html">
-          <button class="nav-btn-header">Registrar</button>
+        <a href="../../pages/login/index.html">
+          <button class="nav-btn-header">Login</button>
         </a>
       </nav>
       <div class="sub-container-header">
